[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-models"
version = "0.1.0"
description = "A CLI tool to list available LLM models from various providers"
readme = "README.md"
authors = [{name = "Ljubomir Buturovic"}]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "anthropic",
    "google-generativeai",
    "google-cloud-aiplatform",
]

[project.urls]
Homepage = "https://github.com/ljbuturovic/llm-models"
Repository = "https://github.com/ljbuturovic/llm-models"

[project.scripts]
llm-models = "llm_models.cli:main"
