[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-models"
version = "0.6.0"
description = "A CLI tool to list available LLM models from various providers"
readme = "README.md"
authors = [{name = "Ljubomir Buturovic"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "google-genai"
]

[project.urls]
Homepage = "https://github.com/ljbuturovic/llm-models"
Repository = "https://github.com/ljbuturovic/llm-models"

[project.scripts]
llm-models = "llm_models.cli:main"
